tests/ui/missing.stderr
error: delimiter is not contained in the input string
 --> tests/ui/missing.rs:2:54
  |
2 |     let _ = const_split_str::split_str!("head-tail", "?");
  |                                                      ^^^
